# Project_CAD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: catia_config.yaml  config.yaml
scraping/: README.md  __init__.py  catia_interfaces.json  complete_scraper.py  crawler.py  db_handler.py  demo.py  interface_index_scraper.py  models.py  query_interface.py  scraper.py
